# boulder_first_snow

./: README.md  environment.yml  pyproject.toml
data/: boulder_daily_weather.csv  boulderdaily.complete.txt
notebooks/: boulder-first-snow-analysis.ipynb
